# UnityToOpenCVNative

./: README.md
Android/OpenCVNativeWrapper/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/OpenCVNativeWrapper/app/src/androidTest/java/com/example/opencvwrapper/: ExampleInstrumentedTest.java
Android/OpenCVNativeWrapper/app/src/main/: AndroidManifest.xml
Android/OpenCVNativeWrapper/app/src/main/cpp/: native-lib.cpp
Android/OpenCVNativeWrapper/app/src/main/java/com/example/opencvwrapper/: DummyActivity.java
Android/OpenCVNativeWrapper/app/src/main/res/layout/: activity_dummy.xml
Android/OpenCVNativeWrapper/app/src/main/res/values/: strings.xml
Android/OpenCVNativeWrapper/app/src/test/java/com/example/opencvwrapper/: ExampleUnitTest.java
Android/OpenCVNativeWrapper/gradle/wrapper/: gradle-wrapper.properties
Unity/UnityToOpenCVNative/Assets/Scripts/Debug/: DummyController.cs
Unity/UnityToOpenCVNative/Assets/Scripts/Native/: NativeLibAdapter.cs
Unity/UnityToOpenCVNative/ProjectSettings/: ProjectSettings.asset
